...
                horizontalAlignment = Alignment.CenterHorizontally,
                verticalArrangement = Arrangement.Center
            ) {
                TextField(
                    modifier = Modifier
                        .padding(bottom = 10.dp)
                        .testTag("ProductNameInput")
                        .fillMaxWidth()
                        .background(color = secondaryColor),
                    value = if (pantryProduct.productName != "") {
                        pantryProduct.productName
                    } else {
                        ""
...
                )
                // Eingabefelder für die Quantität und Einheit des Produkts
                Row {
                    TextField(
                        modifier = Modifier
                            .padding(bottom = 10.dp)
                            .testTag("QuantityInput")
                            .background(color = secondaryColor)
                            .weight(1f),
                        value = if (pantryProduct.quantity != 0) {
                            pantryProduct.quantity.toString()
                        } else {
                            ""
...
                        modifier = Modifier
                            .width(8.dp)
                    )
                    TextField(
                        modifier = Modifier
                            .padding(bottom = 10.dp)
                            .testTag("UnitInput")
                            .weight(1f)
                            .background(color = secondaryColor),
                        value = if (pantryProduct.quantityUnit != "") {
                            pantryProduct.quantityUnit
                        } else {
                            ""
...
                Spacer(modifier = Modifier.weight(1f))

                // Button zum Hinzufügen des Produkts in die digitale Speisekammer
                Button(
                    modifier = Modifier
                        .weight(3f)
                        .testTag("AddToPantryButton"),
                    onClick = {
                        scope.launch {
                            val failed = scope.async {
                                scannerViewModel.addProductToPantry(pantryProduct)
                            }
                            if (failed.await()) {
...
